--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -381,7 +381,7 @@ if (NOT DEFINED SDL_SHARED_ENABLED_BY_DEFAULT)
 endif()
 
 if (NOT DEFINED SDL_TEST_ENABLED_BY_DEFAULT)
-  set(SDL_TEST_ENABLED_BY_DEFAULT ON)
+  set(SDL_TEST_ENABLED_BY_DEFAULT OFF)
 endif()
 
 set(LONGESTOPTIONNAME 0)  # set_option and friends will change this.
