--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
         -DSDL_VENDOR_INFO="Github Workflow" \
         -DCMAKE_INSTALL_PREFIX=cmake_prefix \
         -DCMAKE_BUILD_TYPE=Release \
-        -DCMAKE_C_COMPILER_WORKS=1 \
-        -DCMAKE_CXX_COMPILER_WORKS=1 \
-        -DCMAKE_OBJC_COMPILER_WORKS=1 \
+        -DCMAKE_C_COMPILER_WORKS:STRING=1 \
+        -DCMAKE_CXX_COMPILER_WORKS:STRING=1 \
+        -DCMAKE_OBJC_COMPILER_WORKS:STRING=1 \
         -DCMAKE_OSX_ARCHITECTURES="arm64"
     - name: Build
       run: |
