--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,20 +5,8 @@ endif()
 # MSVC runtime library flags are selected by an abstraction.
 set(CMAKE_POLICY_DEFAULT_CMP0091 NEW)
 
-set(CMAKE_C_COMPILER_FORCED TRUE CACHE INTERNAL "")
-set(CMAKE_CXX_COMPILER_FORCED TRUE CACHE INTERNAL "")
-set(CMAKE_OBJC_COMPILER_FORCED TRUE CACHE INTERNAL "")
-
-set(CMAKE_C_COMPILER_ID_RUN TRUE CACHE INTERNAL "")
-set(CMAKE_CXX_COMPILER_ID_RUN TRUE CACHE INTERNAL "")
-set(CMAKE_OBJC_COMPILER_ID_RUN TRUE CACHE INTERNAL "")
-
-set(CMAKE_C_COMPILER_WORKS TRUE CACHE INTERNAL "")
-set(CMAKE_CXX_COMPILER_WORKS TRUE CACHE INTERNAL "")
-set(CMAKE_OBJC_COMPILER_WORKS TRUE CACHE INTERNAL "")
-
 cmake_minimum_required(VERSION 3.0.0...3.5)
-project(SDL2 C)
+project(SDL2 NONE)
 
 if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
   set(SDL2_SUBPROJECT OFF)
