--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,10 @@ endif()
 
 # MSVC runtime library flags are selected by an abstraction.
 set(CMAKE_POLICY_DEFAULT_CMP0091 NEW)
+set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
 
 cmake_minimum_required(VERSION 3.0.0...3.5)
-project(SDL2 NONE)
-SET(CMAKE_C_COMPILER_WORKS 1 )
-SET(CMAKE_CXX_COMPILER_WORKS 1 )
+project(SDL2 C)
 
 if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
   set(SDL2_SUBPROJECT OFF)
