--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ endif()
 
 # MSVC runtime library flags are selected by an abstraction.
 set(CMAKE_POLICY_DEFAULT_CMP0091 NEW)
-set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
+set(CMAKE_C_COMPILER AppleClang)
+set(CMAKE_CXX_COMPILER AppleClang)
+set(CMAKE_OBJC_COMPILER AppleClang)
 
 cmake_minimum_required(VERSION 3.0.0...3.5)
 project(SDL2 C)
