--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,7 @@ jobs:
       run: |
         brew install \
           autoconf \
-          ninja \
-          pkg-config
+          ninja 
 
     - uses: actions/checkout@v4
     - name: Configure
