--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,20 @@ jobs:
     - uses: actions/checkout@v4
     - name: Configure
       run: |
-        mkdir build
-        cd build 
-        CC=/Users/runner/work/SDL/SDL/build-scripts/clang-fat.sh ../configure
-        make
+        cmake -S . -B build \
+        -DSDL_VENDOR_INFO="Github Workflow" \
+        -DCMAKE_INSTALL_PREFIX=cmake_prefix \
+        -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_OSX_ARCHITECTURES="arm64"
+    - name: Build
+      run: |
+        cmake --build build/ --config Release --parallel
+    - name: Install
+      run: |
+        set -eu
+        cmake --install build/ --config Release
+        echo "SDL2_DIR=$(pwd)/cmake_prefix" >> $GITHUB_ENV
+        ( cd cmake_prefix; find ) | LC_ALL=C sort -u
     - name: Upload
       uses: actions/upload-artifact@v4.3.3
       with:
