--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
     - name: Upload
       uses: actions/upload-artifact@v4.3.3
       with:
-        path: dist/SDL2.dmg
+        path: /Users/runner/work/SDL/SDL/Xcode/SDL/build/SDL2.dmg
                 
