--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         -DCMAKE_OSX_ARCHITECTURES="arm64"
     - name: Build
       run: |
-        cmake --build build/ --config Release --parallel
+        cmake --build build/ --config Release --parallel 16
     - name: Upload
       uses: actions/upload-artifact@v4.3.3
       with:
