--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,11 @@ jobs:
         -DCMAKE_OSX_ARCHITECTURES="arm64"
     - name: Build
       run: |
-        cmake --build build/ --config Release --parallel 16
+        cmake --build build/ --config Release
+        - name: Upload
+    - uses: actions/upload-artifact@v4.3.3
+      with:
+        path: CMakeCache.txt
     - name: Upload
       uses: actions/upload-artifact@v4.3.3
       with:
