--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,12 @@ jobs:
         -DCMAKE_OSX_ARCHITECTURES="arm64"
     - name: Build
       run: |
-        cmake --build build/ --config Release
-        - name: Upload
+        cmake --build build/ --config Release --parallel
+    - name: Upload1
     - uses: actions/upload-artifact@v4.3.3
       with:
         path: CMakeCache.txt
-    - name: Upload
+    - name: Upload2
       uses: actions/upload-artifact@v4.3.3
       with:
         path: build/libSDL2-2.0.0.dylib
