--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,8 @@ jobs:
     - name: Upload1
       uses: actions/upload-artifact@v4.3.3
       with:
-        path: CMakeCache.txt
+        name: cache
+        path: /Users/runner/work/SDL/SDL/CMakeCache.txt
     - name: Upload2
       uses: actions/upload-artifact@v4.3.3
       with:
