--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Configure
       run: |
-        cmake -B build \
+        cmake -B build -C CMakeCache.txt \
         -DCMAKE_BUILD_TYPE=Release \
         -DCMAKE_OSX_ARCHITECTURES="arm64"
         
@@ -26,11 +26,6 @@ jobs:
       run: |
         cmake --build build/ --config Release --parallel
         
-    - name: Upload1
-      uses: actions/upload-artifact@v4.3.3
-      with:
-        name: cache
-        path: build/CMakeCache.txt
     - name: Upload2
       uses: actions/upload-artifact@v4.3.3
       with:
