--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         cmake -B build \
         -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_MODULE_PATH=build/meme/ \
         -DCMAKE_OSX_ARCHITECTURES="arm64"
         
     - name: Build
