--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         
     - name: Build
       run: |
-        cmake --build build/ -t all/fast --config Release --parallel
+        cmake --build build/ -t help --config Release --parallel
         
     - name: Upload
       uses: actions/upload-artifact@v4.3.3
