--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: Configure
       run: |
-        cmake -B build -C cmake_checks_cache.txt \
+        cmake -B build \
         -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_MODULE_PATH=/Users/runner/work/SDL/SDL/CMakeChecksCache \
         -DCMAKE_OSX_ARCHITECTURES="arm64"
         
     - name: Build
@@ -29,5 +30,5 @@ jobs:
     - name: Upload
       uses: actions/upload-artifact@v4.3.3
       with:
-        path: build/libSDL2-2.0.0.dylib
+        path: build/
                 
