--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: macos-latest 
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@main
     - name: Configure
       run: |
         cmake -B build -C cmake_checks_cache.txt \
@@ -20,7 +20,7 @@ jobs:
         cmake --build build/ --config Release --parallel 3
         
     - name: Upload
-      uses: actions/upload-artifact@v4.3.3
+      uses: actions/upload-artifact@main
       with:
         path: build/libSDL2-2.0.0.dylib
                 
