--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_POLICY_DEFAULT_CMP0091 NEW)
 
 cmake_minimum_required(VERSION 3.0.0...3.5)
 project(SDL2 C)
+set(CMAKE_FORCE_C_COMPILER 1)
+set(CMAKE_FORCE_OBJC_COMPILER 1)
 add_definitions(-w)
 
 if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
