--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         
     - name: Build
       run: |
-        cmake --build build/ --config Release --parallel 3
+        cmake --build build/ --parallel 3
         
     - name: Upload
       uses: actions/upload-artifact@main
